tests/e2e/envoy.yaml
# Copyright © 2023 Axkea, spacewander
# Copyright © 2025 United Security Providers AG, Switzerland
# SPDX-License-Identifier: Apache-2.0
---
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.golang
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.Config
                      library_id: coraza-waf
                      library_path: /etc/envoy/coraza-waf.so
                      plugin_name: coraza-waf
                      plugin_config:
                          "@type": type.googleapis.com/xds.type.v3.TypedStruct
                          value:
                              directives:
                                waf1:
                                  simple_directives:
                                    - "Include @coraza-setup"
                                    - "Include @crs-setup"
                                    - "SecDebugLogLevel 3"
                                    - "Include @owasp_crs/*.conf"
                                    - "SecRule REQUEST_URI \"@streq /admin\" \"id:101,phase:1,t:lowercase,deny\""
                                    - "SecRule REQUEST_BODY \"@rx maliciouspayload\" \"id:102,phase:2,t:lowercase,deny\""
                                    - "SecRule RESPONSE_HEADERS::status \"@rx 406\" \"id:103,phase:3,t:lowercase,deny\""
                                    - "SecRule RESPONSE_BODY \"@contains responsebodycode\" \"id:104,phase:4,t:lowercase,deny\""
                                waf2:
                                  simple_directives:
                                    - "Include @coraza-setup"
                                    - "Include @crs-setup"
                                    - "SecDebugLogLevel 3"
                                    - "Include @owasp_crs/*.conf"
                                    - "SecResponseBodyLimit 700"
                                    - "SecResponseBodyLimitAction ProcessPartial"
                                    - "SecRequestBodyInMemoryLimit 40"
                                    - "SecRequestBodyLimit 40"
                                    - "SecRequestBodyLimitAction ProcessPartial"
                                    - "SecRule REQUEST_URI \"@streq /admin\" \"id:101,phase:1,t:lowercase,deny\""
                                    - "SecRule REQUEST_BODY \"@rx maliciouspayload\" \"id:102,phase:2,t:lowercase,deny\""
                                    - "SecRule RESPONSE_HEADERS::status \"@rx 406\" \"id:103,phase:3,t:lowercase,deny\""
                                    - "SecRule RESPONSE_BODY \"@contains responsebodycode\" \"id:104,phase:4,t:lowercase,deny\""
                                waf3:
                                  simple_directives:
                                    - "Include @coraza-setup"
                                    - "Include @crs-setup"
                                    - "SecDebugLogLevel 3"
                                    - "Include @owasp_crs/*.conf"
                                    - "SecResponseBodyLimit 70"
                                    - "SecResponseBodyLimitAction Reject"
                                    - "SecRequestBodyInMemoryLimit 40"
                                    - "SecRequestBodyLimit 40"
                                    - "SecRequestBodyLimitAction Reject"
                                waf4:
                                  simple_directives:
                                    - "Include @coraza-setup"
                                    - "Include @crs-setup"
                                    - "SecDebugLogLevel 3"
                                    - "Include @owasp_crs/*.conf"
                                    - "SecResponseBodyAccess Off"
                                no-waf:
                                  simple_directives:
                                    - "SecRuleEngine Off"
                                sse-response-body-off:
                                  simple_directives:
                                    - "Include @coraza-setup"
                                    - "Include @crs-setup"
                                    - "SecDebugLogLevel 3"
                                    - "Include @owasp_crs/*.conf"
                                    - "SecRule RESPONSE_CONTENT_TYPE \"text/event-stream\" \"id:1001,phase:3,log,allow,ctl:responseBodyAccess=Off\""
                                custom-rules:
                                  simple_directives:
                                    - "SecRuleEngine On"
                                    - "Include /etc/envoy/custom_setup.conf"
                                    - "Include /etc/envoy/custom_rules/*.conf"
                                redirect:
                                  simple_directives:
                                    - "Include @coraza-setup"
                                    - "SecDebugLogLevel 3"
                                    - "SecRule REQUEST_URI \"@streq /test-redirect\" \"id:101,phase:1,redirect:/anything\""
                                    - "SecRule REQUEST_URI \"@streq /test-expanded-redirect\" \"id:102,phase:1,redirect:/anything?uri=%{REQUEST_URI}\""
                                    - "SecRule REQUEST_URI \"@streq /test-redirect-with-status\" \"id:103,phase:1,redirect:/anything,status:307\""
                              default_directive: "waf1"
                              host_directive_map:
                                "foo.example.com": "waf1"
                                "bar.example.com": "waf2"
                                "baz.example.com": "waf3"
                                "body-off.example.com": "waf4"
                                "no-waf.example.com": "no-waf"
                                "sse.example.com": "sse-response-body-off"
                                "custom.example.com": "custom-rules"
                                "redirect.example.com": "redirect"
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*.example.com"]
                      routes:
                        - match:
                            prefix: "/events"
                          route:
                            cluster: sse_service
                        - match:
                            prefix: "/other-waf"
                          route:
                            cluster: service_httpbin
                          # per route config
                          typed_per_filter_config:
                            envoy.filters.http.golang:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.ConfigsPerRoute
                              plugins_config:
                                coraza-waf:
                                  config:
                                    "@type": type.googleapis.com/xds.type.v3.TypedStruct
                                    value:
                                      directives:
                                        route-level-waf:
                                          simple_directives:
                                            - "Include @coraza-setup"
                                            - "Include @crs-setup"
                                            - "Include @owasp_crs/*.conf"
                                            - "SecRule REQUEST_URI \"@contains /other-admin\" \"id:301,phase:1,t:lowercase,deny\""
                                            - "SecRule REQUEST_BODY \"@rx evilpayload\" \"id:102,phase:2,t:lowercase,deny\""
                                      default_directive: "route-level-waf"
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_httpbin
                    # per virtual host config
                    - name: external_service
                      domains: [ "*.vhost-example.com" ]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: sse_service
                          typed_per_filter_config:
                            envoy.filters.http.golang:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.golang.v3alpha.ConfigsPerRoute
                              plugins_config:
                                coraza-waf:
                                  config:
                                    "@type": type.googleapis.com/xds.type.v3.TypedStruct
                                    value:
                                      directives:
                                        vhost-level-waf:
                                          simple_directives:
                                            - "Include @coraza-setup"
                                            - "Include @crs-setup"
                                            - "Include @owasp_crs/*.conf"
                                            - "SecRule REQUEST_URI \"@contains /vhost-admin\" \"id:301,phase:1,t:lowercase,deny\""
                                            - "SecRule REQUEST_BODY \"@rx evilpayload_vhost\" \"id:102,phase:2,t:lowercase,deny\""
                                      default_directive: "vhost-level-waf"
  clusters:
    - name: service_httpbin
      type: STRICT_DNS
      connect_timeout: 1s
      load_assignment:
        cluster_name: service_httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 8080
    - name: sse_service
      type: STRICT_DNS
      connect_timeout: 1s
      load_assignment:
        cluster_name: sse_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: sse-server
                      port_value: 8080
admin:
  access_log_path: /dev/null
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9999
